--- a/wpu-movie/index.html
+++ b/wpu-movie/index.html
@@ -23,13 +23,17 @@
   </nav>
 
 <div class="container">
-  <div class="col-md-8">
-  <h1 class="mt-3">Seacrh Movie</h1>
-  <div class="input-group mb-3">
-  <input type="text" class="form-control" placeholder="Recipient’s username" aria-label="Recipient’s username" aria-describedby="button-addon2">
-  <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
-</div>
-</div>
+  <div class="row mt-3 justify-content-center">
+    <div class="col-md-8">
+      <h1 class="text-center">Search Movie</h1>
+      <div class="input-group mb-3"><input type="text" class="form-control" placeholder="Movie title..." id="search-input"/>
+        <div class="input-group-append"><button class="btn btn-dark" type="button" id="search-button">Search</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<hr>
   <div class="row" id="movie-list">
   </div>
 </div>
