--- a/wpu-movie/index.html
+++ b/wpu-movie/index.html
@@ -39,10 +39,10 @@
 </div>
 
 
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
 
 </body>
 </html>
